--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.1",
+    "knex": "^0.12.7",
     "mongoose": "^4.8.6",
+    "pg": "^6.1.3",
     "pug": "^2.0.0-beta11",
     "winston": "^2.3.1"
   },
